// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. iconfacebook renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`2. iconforwardarrow renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke={null}
/>
`;

exports[`3. iconstar renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`4. iconcopylink renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4290838510}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`5. iconsavebookmark renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`6. icontwitter renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`7. iconvideo renders with different colours 1`] = `
Array [
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke="#c0ffee"
  />,
  <ARTShape
    fill={
      Array [
        0,
        0.9803921568627451,
        0.792156862745098,
        0.8705882352941177,
        1,
      ]
    }
    stroke="#c0ffee"
  />,
]
`;

exports[`8. iconvideo360player renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`9. thestlogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`10. thetimeslogo renders with different colours 1`] = `
<ARTShape
  fill={
    Array [
      0,
      0.9803921568627451,
      0.792156862745098,
      0.8705882352941177,
      1,
    ]
  }
  stroke="#c0ffee"
/>
`;

exports[`11. closeicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={4294626014}
      stroke={4294626014}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`12. closeroundicon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`13. glassmagnifiericon renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`14. rightorientedglassmagnifier renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={4278190080}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGCircle />
            <RNSVGPath />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`15. leftchevron renders with different colours 1`] = `
<RNSVGSvgView
  fill="none"
>
  <RNSVGGroup
    fill={null}
  >
    <RNSVGMask>
      <RNSVGPath
        fill={4294967295}
      />
    </RNSVGMask>
    <RNSVGGroup>
      <RNSVGRect
        fill={4294967295}
      />
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`16. deleteicon renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGGroup
      fill={null}
    >
      <RNSVGGroup
        stroke={4278190080}
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGGroup>
              <RNSVGPath />
              <RNSVGPath />
            </RNSVGGroup>
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGGroup>
    </RNSVGGroup>
  </RNSVGGroup>
</RNSVGSvgView>
`;

exports[`17. iconcheckmark renders with different colours 1`] = `
<RNSVGSvgView>
  <RNSVGGroup>
    <RNSVGPath
      fill={null}
      stroke={2566914048}
    />
  </RNSVGGroup>
</RNSVGSvgView>
`;
